# Risktopia

./: devstart.sh
backend/: Cargo.toml
backend/src/: app.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/game/: card.rs  mod.rs
backend/src/game/engine/phases/: attack.rs  fortify.rs  mod.rs  reinforcement.rs  setup.rs
backend/src/game/model/: board.rs  core.rs  ids.rs  mod.rs  phase_state.rs  player.rs
backend/src/game/protocol/: action.rs  error.rs  event.rs  mod.rs  view.rs
backend/src/game/rules/: combat.rs  mod.rs  ownership.rs  reinforcement.rs  turn_order.rs  validation.rs
backend/src/rooms/: commands.rs  manager.rs  mod.rs  room_loop.rs  service.rs  types.rs
backend/src/transport/: websocket.rs
frontend/: .env  package-lock.json  package.json
frontend/src/: index.css
frontend/src/app/: App.tsx  routes.tsx
frontend/src/components/: ChatPanel.tsx  ConnectionBadge.tsx
frontend/src/features/game/: ActionBar.tsx  MapBoardSvg.tsx  TerritoryNode.tsx  mapData.ts
frontend/src/net/: WebSocketProvider.tsx  mockWsClient.ts  wsClient.ts
frontend/src/pages/: GamePage.tsx  HomePage.tsx  LobbyPage.tsx
frontend/src/types/: messages.ts
frontend/src/util/: ids.ts
